kuber/backend/services/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
spec:
  rules:
  - host: borraw.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: greeting-service
            port:
              number: 8080
